Fix double border showing on section_output

--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -142,7 +142,7 @@ body {
 }
 
 .course-box {
-  border: 1px solid black;
+  border-top: 1px solid black;
   padding-left: 1%;
   padding-top: 0.5%;
 }
